--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">Badass App</string>
-    <string name="Register">Regístrate</string>
-    <string name="Login">Iniciar Sesión</string>
+    <string name="Register">REGÍSTRATE</string>
+    <string name="Login">INICIAR SESIÓN</string>
     <string name="badassTitle">Badass House</string>
 </resources>
