--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -36,5 +36,11 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="mailPlaceholder">Correo</string>
+    <string name="hab1">Habitación 1</string>
+    <string name="hab2">Habitación 2</string>
+    <string name="enchu1">Enchufe 1</string>
+    <string name="enchu2">Enchufe 2</string>
+    <string name="enchu3">Enchufe 3</string>
+    <string name="luz">Luz Principal</string>
 
 </resources>
